--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pdairollback.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pdairollback.yaml
@@ -14,6 +14,7 @@ pipeline:
           deploymentType: Kubernetes
           service:
             serviceRef: webapplication
+            failureStrategies: []
           environment:
             environmentRef: pdtestenv
             deployToAll: false
