Update pipeline pd-ai-rollback

--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pdairollback.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pdairollback.yaml
@@ -26,7 +26,7 @@ pipeline:
                   name: Rollout Deployment
                   identifier: rolloutDeployment
                   type: K8sRollingDeploy
-                  timeout: 10m
+                  timeout: 30s
                   spec:
                     skipDryRun: false
                     pruningEnabled: false
