--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
@@ -49,3 +49,26 @@ pipeline:
                     command: destroy
                   timeout: 1h
         tags: {}
+    - stage:
+        name: destroy
+        identifier: destroy
+        description: ""
+        type: IACM
+        spec:
+          platform:
+            os: Linux
+            arch: Amd64
+          runtime:
+            type: Cloud
+            spec: {}
+          workspace: pdmiggcp
+          execution:
+            steps:
+              - step:
+                  type: IACMTerraformPlugin
+                  name: IACMTerraformPlugin_1
+                  identifier: IACMTerraformPlugin_1
+                  spec:
+                    command: destroy
+                  timeout: 1h
+        tags: {}
