--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
@@ -6,8 +6,8 @@ pipeline:
   tags: {}
   stages:
     - stage:
-        name: mig
-        identifier: mig
+        name: mig-lb
+        identifier: miglb
         description: ""
         type: IACM
         spec:
@@ -21,17 +21,24 @@ pipeline:
           execution:
             steps:
               - step:
-                  type: IACMTerraformPlugin
+                  type: IACMOpenTofuPlugin
                   name: init
                   identifier: init
                   timeout: 10m
                   spec:
                     command: init
               - step:
-                  type: IACMTerraformPlugin
-                  name: IACMTerraformPlugin_4
-                  identifier: IACMTerraformPlugin_4
+                  type: IACMOpenTofuPlugin
+                  name: plan
+                  identifier: plan
+                  timeout: 10m
                   spec:
-                    command: destroy
-                  timeout: 1h
+                    command: plan
+              - step:
+                  type: IACMOpenTofuPlugin
+                  name: apply
+                  identifier: apply
+                  timeout: 10m
+                  spec:
+                    command: apply
         tags: {}
