--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
@@ -6,8 +6,8 @@ pipeline:
   tags: {}
   stages:
     - stage:
-        name: mig-lb
-        identifier: miglb
+        name: lb
+        identifier: lb
         description: ""
         type: IACM
         spec:
@@ -22,16 +22,23 @@ pipeline:
             steps:
               - step:
                   type: IACMTerraformPlugin
-                  name: IACMTerraformPlugin_2
-                  identifier: IACMTerraformPlugin_2
+                  name: init
+                  identifier: init
+                  timeout: 10m
                   spec:
                     command: init
-                  timeout: 10m
               - step:
                   type: IACMTerraformPlugin
-                  name: IACMTerraformPlugin_1
-                  identifier: IACMTerraformPlugin_1
+                  name: plan
+                  identifier: plan
+                  timeout: 10m
                   spec:
-                    command: destroy
-                  timeout: 1h
+                    command: plan
+              - step:
+                  type: IACMTerraformPlugin
+                  name: apply
+                  identifier: apply
+                  timeout: 10m
+                  spec:
+                    command: apply
         tags: {}
