Update pipeline pd-GCP-MIG-UC

--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
@@ -54,7 +54,7 @@ pipeline:
             override: false
           platform:
             os: Linux
-            arch: Amd64
+            arch: Arm64
           runtime:
             type: Cloud
             spec:
@@ -78,5 +78,5 @@ pipeline:
     ci:
       codebase:
         connectorRef: pavandathgithub
-        repoName: https://github.com/pavandath/ansible.git
+        repoName: ansible
         build: <+input>
