Update pipeline pd-GCP-MIG-UC

--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pdGCPMIGUC.yaml
@@ -70,6 +70,7 @@ pipeline:
                   spec:
                     shell: Sh
                     command: |-
+                      sudo chmod +x inventory.py 
                       ansible-inventory -i inventory.py --list
 
 
