Update pipeline pd-e2e

--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pde2e.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pde2e.yaml
@@ -40,4 +40,4 @@ pipeline:
                     connectorRef: pddockerhub
                     image: maven:3.9-eclipse-temurin-21
                     shell: Sh
-                    command: mvn clean package -Dskiptests
+                    command: mvn clean package -DskipTests -Dcheckstyle.skip=true
