--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pde2e.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pde2e.yaml
@@ -43,7 +43,7 @@ pipeline:
                         level: info
                     auth:
                       access_token: b471f17e14246ce10f8f852d7b308f11e8be246a
-                      domain: sonarcloud.io
+                      domain: https://sonarcloud.io
                       ssl: true
   properties:
     ci:
