--- a/.harness/orgs/default/projects/SFTY_Training/pipelines/pde2e.yaml
+++ b/.harness/orgs/default/projects/SFTY_Training/pipelines/pde2e.yaml
@@ -42,9 +42,9 @@ pipeline:
                       log:
                         level: info
                     auth:
-                      access_token: b471f17e14246ce10f8f852d7b308f11e8be246a
-                      domain: https://sonarcloud.io
-                      ssl: true
+                      access_token: sqp_9bf48e11fb4f6a25ae41576016eb47d915150906
+                      domain: http://34.121.101.248:9000/
+                      ssl: false
   properties:
     ci:
       codebase:
