--- a/new.yaml
+++ b/new.yaml
@@ -32,7 +32,7 @@ pipeline:
                   identifier: BuildAndPushDockerRegistry_1
                   spec:
                     connectorRef: pddockerhub
-                    repo: pavandath510/harness-py-app
+                    repo: pavandath510/php-app
                     tags:
                       - v3
   properties:
